<resources>
    <string name="app_name">ChiperTest</string>
    <string name="example_short">Lorem Ipsum</string>
    <string name="released_on">Released on: %1$s</string>
    <string name="language">Language: %1$s</string>
    <string name="average_vote">Average vote: %1$.1f</string>
    <string name="vote_count">Vote count: %1$d</string>
    <string name="movie_popularity">Popularity: %1$.3f</string>
    <string name="movie_overview">Overview: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>