<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/image_movie"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/example_short"
        android:textSize="@dimen/title"
        android:textStyle="italic|bold"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/image_movie"
        app:layout_constraintTop_toTopOf="@id/image_movie" />


    <TextView
        android:id="@+id/text_movie_release"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/released_on"
        android:textSize="@dimen/secondary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_movie_title"
        app:layout_constraintTop_toBottomOf="@id/text_movie_title"/>

    <TextView
        android:id="@+id/text_movie_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textSize="@dimen/secondary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_movie_release"
        app:layout_constraintTop_toBottomOf="@id/text_movie_release"/>

    <TextView
        android:id="@+id/text_movie_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_vote"
        android:textSize="@dimen/secondary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/text_movie_language"
        app:layout_constraintTop_toBottomOf="@id/text_movie_language"/>

</androidx.constraintlayout.widget.ConstraintLayout>